--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "src/**/*.json"
   ],
   "scripts": {
-    "serve": "webpack-dev-server --config webpack.serve.js",
+    "serve": "webpack serve --config webpack.serve.js",
     "clean": "rm -rf node_modules dist *.zip src/headless/dist src/headless/node_modules",
     "headless": "webpack --config webpack.headless.js",
     "nodeps": "webpack --config webpack.nodeps.js",
@@ -117,7 +117,7 @@
     "prettierx": "^0.12.1",
     "run-headless-chromium": "^0.1.1",
     "sass-loader": "^8.0.2",
-    "sinon": "^9.0.2",
+    "sinon": "^9.2.4",
     "style-loader": "^0.23.1",
     "urijs": "^1.19.6",
     "webpack": "^4.43.0",
